--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "chalk": "3.0.0",
     "chokidar": "3.5.1",
     "debug": "4.1.1",
-    "docker-compose": "^0.23.2",
+    "docker-compose": "0.23.4",
     "dockerode": "^2.5.8",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.2",
