--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "chokidar": "3.5.1",
     "debug": "4.1.1",
     "docker-compose": "0.23.4",
-    "dockerode": "^2.5.8",
+    "dockerode": "2.5.8",
     "fs-extra": "^9.0.0",
     "glob": "^7.1.2",
     "gluegun": "https://github.com/edgeandnode/gluegun#v4.3.1-pin-colors-dep",
