--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "docker-compose": "0.23.4",
     "dockerode": "2.5.8",
     "fs-extra": "9.0.0",
-    "glob": "^7.1.2",
+    "glob": "7.1.6",
     "gluegun": "https://github.com/edgeandnode/gluegun#v4.3.1-pin-colors-dep",
     "graphql": "^15.5.0",
     "immutable": "^3.8.2",
