deps: Lock 'graphql' version

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "fs-extra": "9.0.0",
     "glob": "7.1.6",
     "gluegun": "https://github.com/edgeandnode/gluegun#v4.3.1-pin-colors-dep",
-    "graphql": "^15.5.0",
+    "graphql": "15.5.0",
     "immutable": "^3.8.2",
     "ipfs-http-client": "^34.0.0",
     "jayson": "^3.0.2",
