--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "graphql": "15.5.0",
     "immutable": "3.8.2",
     "ipfs-http-client": "34.0.0",
-    "jayson": "^3.0.2",
+    "jayson": "3.2.0",
     "js-yaml": "^3.13.1",
     "node-fetch": "^2.3.0",
     "pkginfo": "^0.4.1",
