--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "js-yaml": "3.13.1",
     "node-fetch": "2.6.0",
     "pkginfo": "0.4.1",
-    "prettier": "^1.13.5",
+    "prettier": "1.19.1",
     "request": "^2.88.0",
     "semver": "7.3.5",
     "sync-request": "^6.1.0",
