--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "prettier": "1.19.1",
     "request": "2.88.2",
     "semver": "7.3.5",
-    "sync-request": "^6.1.0",
+    "sync-request": "6.1.0",
     "tmp-promise": "^3.0.2",
     "web3-eth-abi": "^1.7.0",
     "which": "2.0.2",
