--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   },
   "devDependencies": {
     "eslint": "6.8.0",
-    "jest": "^26.0.0",
-    "spawn-command": "^0.0.2-1",
-    "strip-ansi": "^6.0.0",
+    "jest": "26.0.0",
+    "spawn-command": "0.0.2-1",
+    "strip-ansi": "6.0.0",
     "tern": "^0.24.0"
   },
   "scripts": {
