--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "jest": "26.0.0",
     "spawn-command": "0.0.2-1",
     "strip-ansi": "6.0.0",
-    "tern": "^0.24.0"
+    "tern": "0.24.3"
   },
   "scripts": {
     "test": "jest --verbose",
