--- a/examples/basic-event-handlers/package.json
+++ b/examples/basic-event-handlers/package.json
@@ -13,7 +13,7 @@
     "apollo-fetch": "^0.7.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
+    "babel-polyfill": "6.26.0",
     "babel-register": "^6.26.0",
     "truffle": "^5.0.4",
     "truffle-hdwallet-provider": "^1.0.4"
