example/deps: Lock 'truffle-hdwallet-provider' version

--- a/examples/basic-event-handlers/package.json
+++ b/examples/basic-event-handlers/package.json
@@ -16,7 +16,7 @@
     "babel-polyfill": "6.26.0",
     "babel-register": "6.26.0",
     "truffle": "^5.0.4",
-    "truffle-hdwallet-provider": "^1.0.4"
+    "truffle-hdwallet-provider": "1.0.6"
   },
   "resolutions": {
     "assemblyscript": "0.19.10"
