--- a/examples/basic-event-handlers/package.json
+++ b/examples/basic-event-handlers/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "babel-polyfill": "6.26.0",
     "babel-register": "6.26.0",
-    "truffle": "^5.0.4",
+    "truffle": "5.0.12",
     "truffle-hdwallet-provider": "1.0.6"
   },
   "resolutions": {
