--- a/examples/example-subgraph/package.json
+++ b/examples/example-subgraph/package.json
@@ -7,7 +7,7 @@
     "build-wast": "../../bin/graph build -t wast subgraph.yaml"
   },
   "devDependencies": {
-    "@graphprotocol/graph-ts": "0.27.0-alpha.1"
+    "@graphprotocol/graph-ts": "0.27.0"
   },
   "resolutions": {
     "assemblyscript": "0.19.10"
