Update to ipfs-http-client 58.0.1

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,7 @@
 {
   "parserOptions": {
-    "ecmaVersion": 2017,
-    "ecmaFeatures": {
-    }
+    "ecmaVersion": 2020,
+    "ecmaFeatures": {}
   },
   "env": {
     "node": true
