--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [14, 16, 18]
+        # For some reason tests take forever on node 14 so will re-visit in future when we decide what versions to test on 
+        node-version: [16, 18]
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
