--- a/examples/basic-event-handlers/docker-compose.yml
+++ b/examples/basic-event-handlers/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
   graph-node:
-    # TODO: change to "latest" once it supports apiVersion 0.0.5 and specVersion 0.0.7
-    image: graphprotocol/graph-node:4a8e819
+    image: graphprotocol/graph-node:latest
     ports:
       - '18000:8000'
       - '18001:8001'
@@ -21,8 +20,6 @@ services:
       ipfs: 'ipfs:5001'
       ethereum: 'test:http://ethereum:8545'
       GRAPH_LOG: trace
-      GRAPH_MAX_API_VERSION: '0.0.7' # TODO: remove once "latest" supports apiVersion 0.0.7 by default
-      GRAPH_MAX_SPEC_VERSION: '0.0.5' # TODO: remove once "latest" supports specVersion 0.0.5 by default
   ethereum:
     image: trufflesuite/ganache-cli:latest
     ports:
