--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,6 @@
 name: Release
 on:
-  pull_request:
+  push:
     branches:
       - main
 
@@ -10,6 +10,7 @@ jobs:
     with:
       releaseScript: release
       nodeVersion: 16
+      packageManager: pnpm
     secrets:
       githubToken: ${{ secrets.GITHUB_TOKEN }}
       npmToken: ${{ secrets.NPM_TOKEN }}
