--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.2",
     "eslint": "6.8.0",
-    "jest": "26.0.0"
+    "jest": "26.0.0",
+    "typescript": "^4.9.4"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
     "pnpm": ">=7.14.2"
   },
   "scripts": {
+    "type-check": "tsc --noEmit",
     "build": "exit 0",
     "release": "changeset publish",
     "test:cli": "pnpm --filter @graphprotocol/graph-cli test"
