--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,5 @@ examples/example-subgraph/node_modules
 # Ignore Mac DS_Store files
 .DS_Store
 
-# Bob build outputs
-.bob
+# TSC build outputs
 dist
