--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -11,6 +11,7 @@
     "forceConsistentCasingInFileNames": true,
     "useUnknownInCatchVariables": false,
     "declaration": false,
+    "skipLibCheck": true,
     "allowJs": true
   },
   "include": ["./src"]
