--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "graphprotocol-tools-monorepo",
   "private": true,
   "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
     "@changesets/changelog-github": "^0.4.7",
     "@changesets/cli": "^2.25.2",
+    "babel-jest": "^29.3.1",
     "eslint": "^8.29.0",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "26.0.0",
