--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -47,7 +47,7 @@
     "test:init": "jest tests/cli/init.test.js --verbose",
     "test:validation": "jest tests/cli/validation.test.js --verbose",
     "type-check": "tsc --noEmit",
-    "build": "tsc --build"
+    "build": "tsc --build && chmod +x ./dist/bin.js"
   },
   "publishConfig": {
     "access": "public"
