--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,6 +36,7 @@
     "yaml": "1.9.2"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "copyfiles": "^2.4.1",
     "jest": "26.0.0",
     "spawn-command": "0.0.2-1",
