--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/debug": "^4.1.7",
     "@types/fs-extra": "^9.0.13",
+    "@types/js-yaml": "^3.12.7",
     "@types/which": "^2.0.1",
     "copyfiles": "^2.4.1",
     "jest": "26.0.0",
