--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,6 +15,7 @@
     "chokidar": "3.5.1",
     "debug": "4.3.1",
     "docker-compose": "0.23.4",
+    "dockerode": "2.5.8",
     "fs-extra": "9.0.0",
     "glob": "7.1.6",
     "gluegun": "https://github.com/edgeandnode/gluegun#v4.3.1-pin-colors-dep",
