--- a/packages/ts/package.json
+++ b/packages/ts/package.json
@@ -1,21 +1,21 @@
 {
   "name": "@graphprotocol/graph-ts",
-  "description": "TypeScript/AssemblyScript library for writing subgraph mappings for The Graph",
   "version": "0.29.1",
+  "description": "TypeScript/AssemblyScript library for writing subgraph mappings for The Graph",
+  "main": "index.ts",
   "module": "index.ts",
   "types": "index.ts",
-  "main": "index.ts",
-  "ascMain": "index.ts",
+  "scripts": {
+    "build": "asc --explicitStart --exportRuntime --runtime stub index.ts helper-functions.ts --lib graph-ts -b index.wasm",
+    "format": "prettier --write -c **/*.{js,ts}",
+    "lint": "prettier -c **/*.{js,ts}",
+    "test": "node test/test.js"
+  },
   "dependencies": {
     "assemblyscript": "0.19.10"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
   },
-  "scripts": {
-    "lint": "prettier -c **/*.{js,ts}",
-    "format": "prettier --write -c **/*.{js,ts}",
-    "build": "asc --explicitStart --exportRuntime --runtime stub index.ts helper-functions.ts --lib graph-ts -b index.wasm",
-    "test": "node test/test.js"
-  }
+  "ascMain": "index.ts"
 }
