--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "pnpm": ">=7.14.2"
   },
   "scripts": {
-    "build": "pnpm --filter=@graphprotocol/graph-cli build",
+    "build": "pnpm --filter=@graphprotocol/graph-* build",
     "lint": "pnpm lint:prettier && pnpm lint:eslint",
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier -c .",
     "release": "pnpm build && changeset publish",
     "test:cli": "pnpm --filter @graphprotocol/graph-cli test",
+    "test:ts": "pnpm --filter @graphprotocol/graph-ts test",
     "type-check": "pnpm --filter=@graphprotocol/graph-cli type-check"
   },
   "devDependencies": {
