--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,9 +11,9 @@
   },
   "main": "dist/cli.js",
   "files": [
-    "README.md",
     "CHANGELOG.md",
-    "dist"
+    "dist",
+    "README.md"
   ],
   "scripts": {
     "build": "tsc -b tsconfig.build.json && copyfiles -u 1 src/**/*.graphql dist/ && chmod +x ./dist/bin.js",
