--- a/examples/example-subgraph/package.json
+++ b/examples/example-subgraph/package.json
@@ -8,7 +8,7 @@
     "codegen": "../../packages/cli/dist/bin.js codegen --output-dir src/types/ subgraph.yaml"
   },
   "devDependencies": {
-    "@graphprotocol/graph-ts": "0.29.2"
+    "@graphprotocol/graph-ts": "workspace:*"
   },
   "resolutions": {
     "assemblyscript": "0.19.10"
