style: we love prettier

--- a/examples/basic-event-handlers/docker-compose.yml
+++ b/examples/basic-event-handlers/docker-compose.yml
@@ -38,4 +38,4 @@ services:
       POSTGRES_USER: graph
       POSTGRES_PASSWORD: let-me-in
       POSTGRES_DB: graph
-      POSTGRES_INITDB_ARGS: "-E UTF8 --locale=C"
+      POSTGRES_INITDB_ARGS: '-E UTF8 --locale=C'
