--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,10 +21,10 @@
   "scripts": {
     "build": "tsc -b tsconfig.build.json && oclif manifest && oclif readme && copyfiles -u 1 src/**/*.graphql dist/",
     "oclif:pack": "npm pack && pnpm oclif pack tarballs --no-xz && node scripts/rename-tarballs.mjs",
-    "test": "jest --verbose",
-    "test:add": "jest tests/cli/add.test.ts --verbose",
-    "test:init": "jest tests/cli/init.test.ts --verbose",
-    "test:validation": "jest tests/cli/validation.test.ts --verbose",
+    "test": "vitest run --bail=1",
+    "test:add": "vitest run tests/cli/add.test.ts",
+    "test:init": "vitest run tests/cli/init.test.ts",
+    "test:validation": "vitest run tests/cli/validation.test.ts",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
@@ -48,7 +48,7 @@
     "ipfs-http-client": "55.0.0",
     "jayson": "4.0.0",
     "js-yaml": "3.14.1",
-    "prettier": "1.19.1",
+    "prettier": "3.0.3",
     "request": "2.88.2",
     "semver": "7.4.0",
     "sync-request": "6.1.0",
@@ -60,17 +60,16 @@
   "devDependencies": {
     "@types/debug": "^4.1.7",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^29.0.0",
     "@types/js-yaml": "^3.12.7",
     "@types/semver": "^7.3.13",
     "@types/which": "^2.0.1",
     "copyfiles": "^2.4.1",
-    "jest": "29.7.0",
     "oclif": "3.8.1",
     "spawn-command": "0.0.2-1",
     "strip-ansi": "6.0.1",
     "tern": "0.24.3",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^1.0.2"
   },
   "publishConfig": {
     "access": "public"
