--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "build": "pnpm --filter=@graphprotocol/graph-* build",
     "lint": "pnpm lint:prettier && pnpm lint:eslint",
     "lint:eslint": "eslint .",
+    "lint:eslint:fix": "eslint . --fix",
+    "lint:fix": "pnpm lint:prettier:fix && pnpm lint:eslint:fix",
     "lint:prettier": "prettier -c .",
+    "lint:prettier:fix": "prettier . --write",
     "release": "pnpm build && changeset publish",
     "test:cli": "pnpm --filter @graphprotocol/graph-cli test",
     "test:ts": "pnpm --filter @graphprotocol/graph-ts test",
