--- a/examples/aggregations/subgraph.yaml
+++ b/examples/aggregations/subgraph.yaml
@@ -4,7 +4,7 @@
 # also set to at least 1.1.0
 #
 specVersion: 1.1.0
-description: "Information about Ethereum Mainnet Blocks (run #3)"
+description: 'Information about Ethereum Mainnet Blocks (run #3)'
 repository: https://github.com/graphprotocol/common-subgraphs/blocks/ethereum
 schema:
   file: ./schema.graphql
@@ -15,7 +15,7 @@ dataSources:
     source:
       # We don't realy need a contract, just use Gravatar to have something
       # here
-      address: "0x2E645469f354BB4F5c8a05B3b30A929361cf77eC"
+      address: '0x2E645469f354BB4F5c8a05B3b30A929361cf77eC'
       abi: Contract
       startBlock: 0
     mapping:
