--- a/website/package.json
+++ b/website/package.json
@@ -1,11 +1,12 @@
 {
   "name": "website",
-  "private": true,
   "version": "0.0.0",
   "type": "module",
+  "private": true,
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
+    "clean": "rimraf ./dist",
+    "dev": "vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -22,6 +23,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "rimraf": "^5.0.7",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
