--- a/examples/aggregations/package.json
+++ b/examples/aggregations/package.json
@@ -17,7 +17,7 @@
     "test": "graph test"
   },
   "dependencies": {
-    "@graphprotocol/graph-cli": "^0.68.0",
+    "@graphprotocol/graph-cli": "0.71.2",
     "@graphprotocol/graph-ts": "^0.32.0"
   },
   "devDependencies": {
