--- a/website/package.json
+++ b/website/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-router": "^1.33.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tanstack/router-vite-plugin": "^1.32.17",
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
