--- a/website/package.json
+++ b/website/package.json
@@ -14,13 +14,19 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-router": "^1.33.4",
+    "base-x": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "connectkit": "^1.7.3",
+    "kubo-rpc-client": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.11.0",
+    "wagmi": "^2.9.2"
   },
   "devDependencies": {
     "@tanstack/router-vite-plugin": "^1.32.17",
