--- a/website/package.json
+++ b/website/package.json
@@ -13,6 +13,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@focus-reactive/react-yaml": "^1.1.2",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-router": "^1.33.4",
@@ -26,7 +28,8 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.11.0",
-    "wagmi": "^2.9.2"
+    "wagmi": "^2.9.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tanstack/router-vite-plugin": "^1.32.17",
