--- a/website/package.json
+++ b/website/package.json
@@ -13,8 +13,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.4.2",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-router": "^1.33.4",
     "base-x": "^4.0.0",
@@ -24,10 +28,12 @@
     "kubo-rpc-client": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.11.0",
     "wagmi": "^2.9.2",
+    "yaml": "1.10.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
