--- a/website/package.json
+++ b/website/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.37.1",
     "@tanstack/react-router": "^1.33.4",
     "base-x": "^4.0.0",
