--- a/website/package.json
+++ b/website/package.json
@@ -8,6 +8,7 @@
     "clean": "rimraf ./dist",
     "dev": "vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "prebuild": "tsr generate",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -36,6 +37,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@tanstack/router-cli": "^1.32.10",
     "@tanstack/router-vite-plugin": "^1.32.17",
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.66",
