--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,6 +48,7 @@
     "ipfs-http-client": "55.0.0",
     "jayson": "4.0.0",
     "js-yaml": "3.14.1",
+    "open": "8.4.2",
     "prettier": "3.0.3",
     "semver": "7.4.0",
     "sync-request": "6.1.0",
