--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@graphql-typed-document-node/core": "^3.2.0",
     "@hookform/resolvers": "^3.4.2",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-icons": "^1.3.0",
@@ -20,12 +21,14 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.37.1",
-    "@tanstack/react-router": "^1.33.4",
+    "@tanstack/react-router": "^1.40.0",
     "base-x": "^4.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "connectkit": "^1.7.3",
     "file-type": "^18.2.1",
+    "gql.tada": "^1.7.6",
+    "graphql": "15.5.0",
     "kubo-rpc-client": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,7 +44,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@tanstack/router-cli": "^1.32.10",
+    "@0no-co/graphqlsp": "^1.12.8",
+    "@tanstack/router-cli": "^1.37.0",
     "@tanstack/router-vite-plugin": "^1.32.17",
     "@types/node": "^20.6.2",
     "@types/react": "^18.2.66",
